experience section mobile ver fix

--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -26,7 +26,7 @@
 
 .experience-subtitle {
     margin-top: 0;
-    padding: 1rem;
+    padding: 1rem 0;
 
 
     background-color: #ffffff;
